@@ -1,3 +1,8 @@
+2002-05-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/Foundation/GSMime.h: Add GSMimeHeader class.
+	* Source/Additions/GSMime.m: Add GSMimeHeader class.
+
 2002-05-23  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/Additions/GSXML.m: Fix a few errors in last changes.
